--- a/includes/_append.fragment-css.html
+++ b/includes/_append.fragment-css.html
@@ -1,1 +1,1 @@
-    <link href="{{site.data.info.assets}}assets/css/hl7-iy.css" rel="stylesheet"/>
+<link href="{{site.data.info.assets}}assets/css/affiliate.css" rel="stylesheet"/>
